# bachelor-thesis

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  TODO.md  compile_thesis.sh  pyproject.toml
.github/workflows/: compile-thesis.yml
paper/: acronyms.typ  bibliography.bib  compile_thesis.sh  graphs.ipynb  main.typ  presentation.typ  print_notes.txt
paper/template/: front.typ  template.typ
paper/template/res/: IEEE-modified.csl
src/: .pre-commit-config.yaml  graphs.ipynb  play.py  pyproject.toml  run_agents.sh  run_thesis.sh  train_agent.sh
src/agents/: __init__.py  base.py  ddqn.py  dqn.py  greedy.py  human.py  monte_carlo.py  q_learning.py  random.py  reinforce.py  trainable.py  utils.py
src/game/: card.py  card_utils.py  deck.py  env.py  game.py  game_state.py  player.py  state_manager.py
src/logs/human/: franta.json  honza.json  human_stats.json  human_total.json  kikin.json  kvitek.json  merge.py  paja.json  pepek.json  vitek.json  vojta.json  vs_greedy.json
src/prsi/: card.py  card_utils.py  deck.py  env.py  game_state.py  player.py  rl_utils.py
src/prsi/agents/: agent.py  baselines.py
src/scripts/: run_thesis.sh  train_agent.sh
src/tests/: test_card.py  test_deck.py  test_manager.py  test_player.py
