[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "markupsafe==2.1.5",
    "mypy>=1.19.1",
    "numpy>=2.3.5",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "torch>=2.10.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
